--- a/src/main/java/Frames/FontysAppFrame.form
+++ b/src/main/java/Frames/FontysAppFrame.form
@@ -280,6 +280,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="tfShippingPostcode">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfShippingPostcodeActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel8">
           <Properties>
